examples/invalid/semanticErr/exit/globalReturn.wacc
# trying to return from the main program
# Output:
# #semantic error#

#Program:#

begin
  return 42 ;
	println "should not get here" 
end
	
